--- a/style.css
+++ b/style.css
@@ -12,12 +12,19 @@ h1 {
 	font-size: 1.5em;
 	margin-top: 0;
 }
-
-h3 {
-	margin-bottom: 0;
+#list-heading {
+	margin: 1em 0;
+	overflow: auto;
 }
-
+h3 {
+	float: left;
+	margin: 0;
+}
+#reset {
+	float: right;
+}
 ul {
+	clear: both;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -26,13 +33,16 @@ li {
 	margin: 0.5em 0;
 }
 hr {
+	clear: both;
 	margin: 1em 0;
 }
 fieldset {
 	border: none;
 	padding: 0;
 }
-
+#mute-form label {
+	display: none;
+}
 button.remove {
 	float: right;
 	margin-left: 1em;
@@ -47,4 +57,12 @@ button.remove {
 }
 #status-flag-form {
 	margin-top: 1em;
+}
+.transparency {
+	clear: both;
+	display: table;
+	width: 100%;
+}
+select {
+	float: right;
 }
